RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/sum_even_0006/sum_even_merged.txt
/home/dimpling/AutoSpec/out/sum_even_0006/sum_even_merged.c:6:71: error: unterminated comment
    6 | ensures \result == 2 * (n / 2) * ((n / 2) + 1) / 2; /* Sum of first (n/2) even numbers */;
      |                                                                       ^
